test/resources/nameAnalyzer/failing/DuplicateDefs2.amy
object DefNames
  abstract class Foo
  case class Bar() extends Foo

  def Foo(): Int(32) := 42 end Foo
end DefNames
